se alejan cositas

--- a/Firmware/.vscode/settings.json
+++ b/Firmware/.vscode/settings.json
@@ -96,6 +96,8 @@
         "streambuf": "c",
         "cinttypes": "c",
         "typeinfo": "c",
-        "platform.h": "c"
-    }
+        "platform.h": "c",
+        "stdlib.h": "c"
+    },
+    "idf.pythonInstallPath": "/usr/bin/python"
 }
